Support theme: Prevent clipping of topic author avatar at smaller viewports.
Props dufresnesteven, vajaparadarshit, coffee2code.
Fixes #4988.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9439 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -252,13 +252,14 @@ section {
 			max-height: 80px;
 		}
 
-		@media only screen and (max-width: 480px) {
-
+		@media only screen and (max-width: 1040px) {
 			div.bbp-reply-author img.avatar,
 			div.bbp-topic-author img.avatar {
 				position: relative;
-				top: 0;
-				margin-bottom: 40px;
+				margin: 6px 1rem 2rem 0;
+			}
+			div.bbp-topic-content {
+				clear: left;
 			}
 		}
 
@@ -284,6 +285,7 @@ section {
 
 			@media screen and ( max-width: 480px ) {
 				min-height: auto;
+				border-bottom: 0;
 			}
 		}
 
