--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
@@ -3591,12 +3591,14 @@ section {
 	max-height: 80px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 1040px) {
 	.bbpress #bbpress-forums div.bbp-reply-author img.avatar,
 	.bbpress #bbpress-forums div.bbp-topic-author img.avatar {
 		position: relative;
-		top: 0;
-		margin-bottom: 40px;
+		margin: 6px 1rem 2rem 0;
+	}
+	.bbpress #bbpress-forums div.bbp-topic-content {
+		clear: left;
 	}
 }
 
@@ -3623,6 +3625,7 @@ section {
 	.bbpress #bbpress-forums div.bbp-reply-author,
 	.bbpress #bbpress-forums div.bbp-topic-author {
 		min-height: auto;
+		border-bottom: 0;
 	}
 }
 
